footer initiated - images finished

--- a/PR/index.html
+++ b/PR/index.html
@@ -32,15 +32,78 @@
                 </div>
             </div>
         </header>
+
+
         <main>
             <div class="main">
 
             </div>
         </main>
-        <footer>
-            <div class="footer">
 
+
+        <footer>
+            <div class="footer-flex-row">
+                <div class="flex-column-footer">
+                    <div class="footer-title">My social networks</div>
+                    <div>LOres ipsum</div>
+                    <div>lores ipsum</div>
+                    <div>
+
+                    </div>
+
+                </div>
+
+                <div class="flex-column-footer">
+                    <div class="footer-title">Email newsletter</div>
+                    <div>sign up for our email newsletter to find out all the news.</div>
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <button type="submit">SUBMIT</button>
+                </div>
+                <div class="flex-column-footer">
+                    <div class="footer-title">Images of the day</div>
+                    <div class="day-images">
+                        <img src="images/footer/footer_1.jpg" alt="descriptive information of picture 1">
+                        <img src="images/footer/footer_3.jpg" alt="descriptive information of picture 2">
+                        <img src="images/footer/footer_4.jpg" alt="descriptive information of picture 3">
+                        <img src="images/footer/footer_5.jpg" alt="descriptive information of picture 4">
+                        <img src="images/footer/footer_6.jpg" alt="descriptive information of picture 5">
+                        <img src="images/footer/footer_7.jpg" alt="descriptive information of picture 6">
+                        <img src="images/footer/footer_2.jpg" alt="descriptive information of picture 7">
+                        <img src="images/footer/footer_8.jpg" alt="descriptive information of picture 8">
+                        <img src="images/footer/footer_9.jpg" alt="descriptive information of picture 9">
+                    </div>
+                </div>
             </div>
+
+            <hr>
+
+            <div class="footer-flex-row">
+                <div>
+                    <span></span>
+                    <div class="bold">Give us a call:</div>
+                    <div>+00 (123) 765 8765</div>
+                </div>
+
+                <div>
+                    <span></span>
+                    <div class="bold">Send Us A Mail:</div>
+                    <div>myName@domain.com</div>
+                </div>
+
+                <div>
+                    <span></span>
+                    <div class="bold">Monday - Saturday:</div>
+                    <div>14:00am - 18:00pm</div>
+                </div>
+
+                <div>
+                    <span></span>
+                    <div class="bold">Come Visit Us:</div>
+                    <div>Direction to my location</div>
+                </div>
+            </div>
+
         </footer>
     </div>
 </body>
