--- a/PR/index.html
+++ b/PR/index.html
@@ -11,9 +11,9 @@
     <div class="container"> 
         <header>
             <div class="header">
-                <div>
-                    <span class="header-top">
-                        <img src="images/favicon.ico" alt="web icon">
+                <div style="display: flex;">
+                    <span class="header-top" style="display: flex;flex-direction: row;justify-content: center;">
+                        <img src="images/favicon.ico" alt="web icon" style="justify-self: center;align-self: center;">
                     </span>
                     <span class="header-top">
                         <ul>
