Web design html finished, styling pending

--- a/PR/index.html
+++ b/PR/index.html
@@ -12,8 +12,8 @@
         <header>
             <div class="header">
                 <div style="display: flex;">
-                    <span class="header-top" style="display: flex;flex-direction: row;justify-content: center;">
-                        <img src="images/favicon.ico" alt="web icon" style="justify-self: center;align-self: center;">
+                    <span class="header-top flex-center-content" >
+                        <img src="images/favicon.ico" alt="web icon">
                     </span>
                     <span class="header-top">
                         <ul>
@@ -105,7 +105,7 @@
                             <p>Web design, or WD, is the art and science of creating engaging and user-friendly websites. In today's fast-paced digital world, a well-designed website is like a virtual storefront, attracting visitors and converting them into customers. <span class="red-dashed">Read more...</span></p>
                         </div>
                     </div>
-
+                    <hr>
                     <div class="float-blog clearfix">
                         <img src="images/blog_2.jpg" alt="image of a person running" class="float-right">
                         <div>
@@ -113,7 +113,7 @@
                             <p>We’re a bit biased here but we’re still thankful for this comprehensive look at upcoming web design trends! This article covers a variety of design styles that ... <span class="red-dashed">Read more...</span> </p>
                         </div>
                     </div>
-
+                    <hr>
                     <div class="float-blog clearfix">
                         <img src="images/blog_3.jpg" alt="image of a person with the sun at the end" class="float-left">
                         <div>
