--- a/PR/index.html
+++ b/PR/index.html
@@ -16,12 +16,14 @@
                         <img src="images/favicon.ico" alt="web icon">
                     </span>
                     <span class="header-top">
-                        <ul>
-                            <li><a class="active" href="#home">Home</a></li>
-                            <li><a href="#news">News</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li class="clearfix"><a href="#about">About</a></li>
-                        </ul>
+                        <nav>
+                            <ul>
+                                <li><a class="active" href="#home">Home</a></li>
+                                <li><a href="#news">News</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                                <li class="clearfix"><a href="#about">About</a></li>
+                            </ul>
+                        </nav>
                     </span>
                 </div>
                 <div class="header-image">
