--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -16,12 +16,14 @@
                         <img src="images/favicon.ico" alt="web icon">
                     </span>
                     <span class="header-top">
-                        <ul>
-                            <li><a class="active" href="#home">Home</a></li>
-                            <li><a href="#news">News</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li class="clearfix"><a href="#about">About</a></li>
-                        </ul>
+                        <nav>
+                            <ul>
+                                <li><a class="active" href="#home">Home</a></li>
+                                <li><a href="#news">News</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                                <li class="clearfix"><a href="#about">About</a></li>
+                            </ul>
+                        </nav>
                     </span>
                 </div>
                 <div class="header-secondary">
@@ -36,6 +38,13 @@
 
         <main>
             <div class="main">
+                <h2>MULTIFACETED ASPECTS OF DESIGN. LIGHT. AND COLOR</h2>
+
+                <p>Design, light, and color are integral components of the visual and functional aspects of art, architecture, and everyday life. The thoughtful integration of these elements is crucial for creating compelling, harmonious, and user-friendly designs.</p>
+                <p>This table explores the multifaceted aspects of design, light, and color. Each theme encompasses various principles, elements, and applications that influence our visual experiences. Understanding the psychology of color, the significance of lighting, and the principles of design can enhance the way we interact with our surroundings and the products we use.</p>
+                <p>Discover how these elements intersect and impact the world of design by exploring the following table:</p>
+
+
                 
             </div>
         </main>
