table made and fixed some containers

--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/multifaceted.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container"> 
         <header>
-            <div class="header">
-                <div>
+                <div class="flex-header">
                     <span class="header-top">
                         <img src="images/favicon.ico" alt="web icon">
                     </span>
@@ -26,27 +25,82 @@
                         </nav>
                     </span>
                 </div>
-                <div class="header-secondary">
+                <div class="header-image secondary-image-header">
                     <div class="anika-container">
                         <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
                         <div>My work as a designer</div>
                     </div>
                 </div>
-            </div>
         </header>
 
 
         <main>
-            <div class="main">
-                <h2>MULTIFACETED ASPECTS OF DESIGN. LIGHT. AND COLOR</h2>
+            <section id="multifaceted-aspects">    
+                <div class="container">
+                    <h2>MULTIFACETED ASPECTS OF DESIGN. LIGHT. AND COLOR</h2>
 
-                <p>Design, light, and color are integral components of the visual and functional aspects of art, architecture, and everyday life. The thoughtful integration of these elements is crucial for creating compelling, harmonious, and user-friendly designs.</p>
-                <p>This table explores the multifaceted aspects of design, light, and color. Each theme encompasses various principles, elements, and applications that influence our visual experiences. Understanding the psychology of color, the significance of lighting, and the principles of design can enhance the way we interact with our surroundings and the products we use.</p>
-                <p>Discover how these elements intersect and impact the world of design by exploring the following table:</p>
+                    <p>Design, light, and color are integral components of the visual and functional aspects of art, architecture, and everyday life. The thoughtful integration of these elements is crucial for creating compelling, harmonious, and user-friendly designs.</p>
+                    <p>This table explores the multifaceted aspects of design, light, and color. Each theme encompasses various principles, elements, and applications that influence our visual experiences. Understanding the psychology of color, the significance of lighting, and the principles of design can enhance the way we interact with our surroundings and the products we use.</p>
+                    <p>Discover how these elements intersect and impact the world of design by exploring the following table:</p>
+                </div>
+            </section>
+
+            <section id="multifaceted-table">
+                <div class="container">
+                    <h2>Design, light and color</h2>
+
+                    <table>
+                        <thead>    
+                            <tr>
+                                <td></td>
+                                <th scope="col"> Design</th>
+                                <th scope="col">Light</th>
+                                <th scope="col">Color</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <colgroup>
+                                <col span="4" style="width: 20%;"/>
+                            </colgroup>
+                            <tr>
+                                <th scope="row">Principles</td>
+                                <td>algo</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr class="light-blue-row">
+                                <th scope="row">Elements</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Theory</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr class="light-blue-row">
+                                <th scope="row">Applications</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Psychology</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
 
 
-                
-            </div>
+            </section>
+
+
         </main>
 
 
@@ -114,6 +168,5 @@
             </div>
 
         </footer>
-    </div>
 </body>
 </html>
