--- a/PR/index.html
+++ b/PR/index.html
@@ -13,29 +13,27 @@
 
 <body>
         <header>
-            <div class="header">
-                <div style="display: flex;">
-                    <span class="header-top flex-center-content" >
-                        <img src="images/favicon.ico" alt="web icon">
-                    </span>
-                    <span class="header-top">
-                        <nav>
-                            <ul>
-                                <li><a class="active" href="#home">Home</a></li>
-                                <li><a href="#news">News</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                                <li class="clearfix"><a href="#about">About</a></li>
-                            </ul>
-                        </nav>
-                    </span>
-                </div>
+            <div class="flex-header">
+                <span class="header-top">
+                    <img src="images/favicon.ico" alt="web icon">
+                </span>
+                <span class="header-top">
+                    <nav>
+                        <ul>
+                            <li><a class="active" href="#home">Home</a></li>
+                            <li><a href="#news">News</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                            <li class="clearfix"><a href="#about">About</a></li>
+                        </ul>
+                    </nav>
+                </span>
+            </div>
                 <div class="header-image">
                     <div class="anika-container">
                         <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
                         <div>My work as a designer</div>
                     </div>
                 </div>
-            </div>
         </header>
 
 
