--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -14,36 +14,33 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container"> 
         <header>
-            <div class="header">
-                <div style="display: flex;">
-                    <span class="header-top flex-center-content">
-                        <img src="images/favicon.ico" alt="web icon">
-                    </span>
-                    <span class="header-top">
-                        <nav>
-                            <ul>
-                                <li><a class="active" href="#home">Home</a></li>
-                                <li><a href="#news">News</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                                <li class="clearfix"><a href="#about">About</a></li>
-                            </ul>
-                        </nav>
-                    </span>
-                </div>
-                <div class="header-secondary">
-                    <div class="anika-container">
-                        <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
-                        <div>My work as a designer</div>
-                    </div>
+            <div class="flex-header">
+                <span class="header-top">
+                    <img src="images/favicon.ico" alt="web icon">
+                </span>
+                <span class="header-top">
+                    <nav>
+                        <ul>
+                            <li><a class="active" href="#home">Home</a></li>
+                            <li><a href="#news">News</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                            <li class="clearfix"><a href="#about">About</a></li>
+                        </ul>
+                    </nav>
+                </span>
+            </div>
+            <div class="header-image secondary-image-header">
+                <div class="anika-container">
+                    <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
+                    <div>My work as a designer</div>
                 </div>
             </div>
         </header>
 
 
         <main>
-            <div class="main clearfix">
+            <div class="container clearfix">
 
                 
                 <div class="more-on-blog float-right">
@@ -250,6 +247,5 @@
             </div>
 
         </footer>
-    </div>
 </body>
 </html>
