Changed grid footer to flex and fixed

--- a/PR/index.html
+++ b/PR/index.html
@@ -206,7 +206,7 @@
         <footer>
             <div class="container">
                 <div class="footer-flex-row">
-                    <div class="flex-column-footer">
+                    <div class="footer-flex-column">
                         <div class="footer-title">My social networks</div>
                         <div>LOres ipsum</div>
                         <div>lores ipsum</div>
@@ -216,14 +216,14 @@
 
                     </div>
 
-                    <div class="flex-column-footer">
+                    <div class="footer-flex-column">
                         <div class="footer-title">Email newsletter</div>
                         <div>sign up for our email newsletter to find out all the news.</div>
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email">
                         <button type="submit">SUBMIT</button>
                     </div>
-                    <div class="flex-column-footer">
+                    <div class="footer-flex-column">
                         <div class="footer-title">Images of the day</div>
                         <div class="day-images">
                             <img src="images/footer/footer_1.jpg" alt="descriptive information of picture 1">
