--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -176,7 +176,7 @@
 
         <footer>
             <div class="footer-flex-row" style="justify-content: center;">
-                <div class="flex-column-footer" style="flex: 1;">
+                <div class="footer-flex-column">
                     <div class="footer-title">My social networks</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit porttitor turpis, nullam congue convallis montes purus class tristique mollis velit, posuere libero netus sodales dictum habitasse cubilia odio.</p>
                     <p>Lectus fermentum mattis eu blandit iaculis ullamcorper tristique senectus consequat montes a ridiculus elementum natoque habitasse, volutpat sem cum porta auctor vitae nisl magnis dignissim aenean nascetur nibh mauris... []</p>
@@ -186,14 +186,14 @@
 
                 </div>
 
-                <div class="flex-column-footer" style="flex: 1;">
+                <div class="footer-flex-column">
                     <div class="footer-title">Email newsletter</div>
                     <div>sign up for our email newsletter to find out all the news.</div>
                     <input type="text" placeholder="Name">
                     <input type="email" placeholder="Email">
                     <button type="submit">SUBMIT</button>
                 </div>
-                <div class="flex-column-footer" style="flex: 1;">
+                <div class="footer-flex-column">
                     <div class="footer-title">Images of the day</div>
                     <div class="day-images">
                         <img src="images/footer/footer_1.jpg" alt="descriptive information of picture 1">
