footer icons added

--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -225,9 +225,14 @@
                 <div class="footer-flex-column">
                     <div class="footer-title">My social networks</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit porttitor turpis, nullam congue convallis montes purus class tristique mollis velit, posuere libero netus sodales dictum habitasse cubilia odio.</p>
-                    <p>Lectus fermentum mattis eu blandit iaculis ullamcorper tristique senectus consequat montes a ridiculus elementum natoque habitasse, volutpat sem cum porta auctor vitae nisl magnis dignissim aenean nascetur nibh mauris... []</p>
-                    <div>
-
+                    <p>Lectus fermentum mattis eu blandit iaculis ullamcorper tristique senectus consequat montes a ridiculus elementum natoque habitasse, volutpat sem cum porta auctor vitae nisl magnis dignissim aenean nascetur nibh mauris... [<i class="fa-solid fa-arrow-right"></i>]</p>
+                    <div class="footer-brands">
+                        <i class="fa-brands fa-dribbble"></i>
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fa-brands fa-google-plus-g"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-vk"></i>
                     </div>
 
                 </div>
