--- a/PR/index.html
+++ b/PR/index.html
@@ -219,9 +219,11 @@
                     <div class="footer-flex-column">
                         <div class="footer-title">Email newsletter</div>
                         <div>sign up for our email newsletter to find out all the news.</div>
-                        <input type="text" placeholder="Name">
-                        <input type="email" placeholder="Email">
-                        <button type="submit">SUBMIT</button>
+                        <form action="post" class="sign-up">
+                            <input type="text" placeholder="Name">
+                            <input type="email" placeholder="Email">
+                            <button type="submit" class="regular-button">SUBMIT</button>
+                        </form>
                     </div>
                     <div class="footer-flex-column">
                         <div class="footer-title">Images of the day</div>
