--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -64,33 +64,33 @@
                             </colgroup>
                             <tr>
                                 <th scope="row">Principles</td>
-                                <td>algo</td>
-                                <td></td>
-                                <td></td>
+                                <td>Good design is essential for user experience. It should be intuitive and visually appealing.</td>
+                                <td>Natural light can provide a sense of connection to the outdoors and improve well-being.</td>
+                                <td>Colors can convey emotions and have psychological effects on viewers.</td>
                             </tr>
                             <tr class="light-blue-row">
                                 <th scope="row">Elements</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Design principles guide the creation of functional and aesthetically pleasing products.</td>
+                                <td>Lighting plays a crucial role in design. It can create ambiance and highlight key elements.</td>
+                                <td>Color selection can evoke emotions and set the tone for a design project.</td>
                             </tr>
                             <tr>
                                 <th scope="row">Theory</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                    <td>Design thinking involves empathy, defining the problem, ideation, prototyping, and testing.</td>
+                                    <td>Proper lighting design can reduce eye strain and improve productivity in workspaces.</td>
+                                    <td>Color contrast is used for emphasis, guiding the viewer's attention.</td>
                             </tr>
                             <tr class="light-blue-row">
                                 <th scope="row">Applications</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>User-centered design ensures that products meet the needs and preferences of users.</td>
+                                <td>Light and shadow can add depth and dimension to a design, creating a 3D effect.</td>
+                                <td>Color harmonies like complementary and analogous colors create visual interest.</td>
                             </tr>
                             <tr>
                                 <th scope="row">Psychology</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Designers often collaborate with clients to refine the design concept and vision.</td>
+                                <td>Architectural lighting can transform the appearance of buildings and landscapes.</td>
+                                <td>Choosing the right color for a call-to-action button can impact conversion rates on a website.</td>
                             </tr>
                         </tbody>
                     </table>
