Revert "Styling started"
This reverts commit 545c6e01e8e1e56645fe3bfe9c67870d2e57832d.

--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -150,7 +150,7 @@
                     </section>
     
                     <section class="comment-form">
-                        <h5>Write A Comment</h5>
+                        <h3>Write A Comment</h3>
                         <form action="post">
                 
                             <div>
@@ -241,7 +241,7 @@
 
                 <div class="footer-flex-column">
                     <div class="footer-title">Email newsletter</div>
-                    <p>Sign up for our email newsletter to find out all the news.</p>
+                    <div>Sign up for our email newsletter to find out all the news.</div>
                     <form action="post" class="sign-up">
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email">
