image explode finished pending color

--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -251,15 +251,15 @@
                 <div class="footer-flex-column">
                     <div class="footer-title">Images of the day</div>
                     <div class="day-images">
-                        <img src="images/footer/footer_1.jpg" alt="descriptive information of picture 1">
-                        <img src="images/footer/footer_2.jpg" alt="descriptive information of picture 2">
-                        <img src="images/footer/footer_3.jpg" alt="descriptive information of picture 3">
-                        <img src="images/footer/footer_4.jpg" alt="descriptive information of picture 4">
-                        <img src="images/footer/footer_5.jpg" alt="descriptive information of picture 5">
-                        <img src="images/footer/footer_6.jpg" alt="descriptive information of picture 6">
-                        <img src="images/footer/footer_7.jpg" alt="descriptive information of picture 7">
-                        <img src="images/footer/footer_8.jpg" alt="descriptive information of picture 8">
-                        <img src="images/footer/footer_9.jpg" alt="descriptive information of picture 9">
+                        <div class="exploding-image"><img src="images/footer/footer_1.jpg" alt="descriptive information of picture 1"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_2.jpg" alt="descriptive information of picture 2"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_3.jpg" alt="descriptive information of picture 3"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_4.jpg" alt="descriptive information of picture 4"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_5.jpg" alt="descriptive information of picture 5"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_6.jpg" alt="descriptive information of picture 6"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_7.jpg" alt="descriptive information of picture 7"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_8.jpg" alt="descriptive information of picture 8"></div>
+                        <div class="exploding-image"><img src="images/footer/footer_9.jpg" alt="descriptive information of picture 9"></div>
                     </div>
                 </div>
             </div>
@@ -268,7 +268,7 @@
 
             <div class="footer-flex-row">
                 <div style="display: flex;">
-                    <i class="fa-solid fa-phone reverse" style="margin: 4px;"></i>
+                    <i class="fa-solid fa-phone phone reverse" style="margin: 4px;"></i>
                     <div>
                         <div class="bold">Give us a call:</div>
                         <div>+00 (123) 765 8765</div>
