--- a/PR/index.html
+++ b/PR/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anika main page</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
@@ -29,7 +31,7 @@
                 </span>
             </div>
                 <div class="header-image">
-                    <div class="anika-container">
+                    <div class="anika-container-camera">
                         <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
                         <div>My work as a designer</div>
                     </div>
