--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anika as a multifaceted artist</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/multifaceted.css">
@@ -47,7 +49,7 @@
 
             <section id="multifaceted-table">
                 <div class="container">
-                    <h2>Design, light and color</h2>
+                    <h3 class="italic" style="text-align: center;">Design, light and color</h3>
 
                     <table>
                         <thead>    
