--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -49,7 +49,7 @@
 
             <section id="multifaceted-table">
                 <div class="container">
-                    <h3 class="italic" style="text-align: center;">Design, light and color</h3>
+                    <h3 class="design-light-color italic" style="text-align: center;">Design, light and color</h3>
 
                     <table>
                         <thead>    
