--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -16,19 +16,21 @@
     <title>Document</title>
 </head>
 <body>
-        <header>
+        <header class="header">
             <div class="flex-header">
                 <span class="header-top">
                     <img src="images/favicon.ico" alt="web icon">
                 </span>
                 <span class="header-top">
                     <nav>
-                        <ul>
-                            <li><a class="active" href="index.html">Home</a></li>
-                            <li><a href="multifaceted.html">Multifaceted</a></li>
-                            <li><a href="web-design.html">Pricing</a></li>
-                            <li><a href="#Blog">Blog</a></li>
-                            <li class="clearfix"><a href="#Contact">Contact</a></li>
+                        <input type="checkbox" class="menu-btn" id="menu-btn" />
+                        <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
+                        <ul class="menu">
+                            <li><a class="active" href="index.html"><span>Home</span></a></li>
+                            <li><a href="multifaceted.html"><span>Multifaceted</span></a></li>
+                            <li><a href="web-design.html"><span>Pricing</span></a></li>
+                            <li><a href="#Blog"><span>Blog</span></a></li>
+                            <li class="clearfix"><a href="#Contact"><span>Contact</span></a></li>
                         </ul>
                     </nav>
                 </span>
@@ -296,7 +298,7 @@
                 </div>
                     
                 <div style="display: flex;">
-                    <i class="fa fa-map-marker" style="margin: 4px;"></i>
+                    <i class="fa fa-map-marker-alt" style="margin: 4px;"></i>
                     <div>
                         <div class="bold">Come Visit Us:</div>
                         <div>Direction to my location</div>
