fixed minor bug

--- a/PR/index.html
+++ b/PR/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <hr>
                     <div class="float-blog clearfix">
-                        <img src="images/blog_2.jpg" alt="image of a person running" class="float-right">
+                        <img class="float-right" src="images/blog_2.jpg" alt="image of a person running">
                         <div>
                             <h4 class="red-dashed">22 inspiring web design trends for 2022</h4>
                             <p>We’re a bit biased here but we’re still thankful for this comprehensive look at upcoming web design trends! This article covers a variety of design styles that ... <span class="red-dashed">Read more...</span> </p>
@@ -122,10 +122,10 @@
                     </div>
                     <hr>
                     <div class="float-blog clearfix">
-                        <img src="images/blog_3.jpg" alt="image of a person with the sun at the end" class="float-left">
+                        <img class="float-left" src="images/blog_3.jpg" alt="image of a person with the sun at the end" class="float-left">
                         <div>
                             <h4 class="red-dashed">Break the Internet: The Rising Popularity of Glitch Art</h4>
-                            <p>Author Ben Barnhart breaks down the defining characteristics of glitch art, sharing examples of elements like pixelation, light leaks, and color degradation. <span class="red-dashed">Read more...</span> </p>
+                            <p >Author Ben Barnhart breaks down the defining characteristics of glitch art, sharing examples of elements like pixelation, light leaks, and color degradation. <span class="red-dashed">Read more...</span> </p>
                         </div>
                     </div>
                 </div>
