index relatevely finished

--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/multifaceted.css">
+    <link rel="stylesheet" href="css/mobile/mobile-common.css">
+    <link rel="stylesheet" href="css/mobile/mobile-multifaceted.css">
     <title>Document</title>
 </head>
 <body>
