--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/web-design.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/mobile/mobile-common.css">
+    <link rel="stylesheet" href="css/mobile/mobile-web-design.css">
 
 
 
