--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -13,29 +13,41 @@
     <title>Document</title>
 </head>
 <body>
-        <header>
-                <div class="flex-header">
-                    <span class="header-top">
-                        <img src="images/favicon.ico" alt="web icon">
-                    </span>
-                    <span class="header-top">
-                        <nav>
-                            <ul>
-                                <li><a class="active" href="#home">Home</a></li>
-                                <li><a href="#news">News</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                                <li class="clearfix"><a href="#about">About</a></li>
-                            </ul>
-                        </nav>
-                    </span>
-                </div>
-                <div class="header-image secondary-image-header">
-                    <div class="anika-container">
-                        <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
-                        <div>My work as a designer</div>
-                    </div>
-                </div>
-        </header>
+    <header>
+
+        <div class="flex-header">
+            <span class="header-top">
+                <img src="images/favicon.ico" alt="web icon">
+            </span>
+            <span class="header-top opening-menu">
+                <nav>
+                    <ul>
+                        <li><a class="index.html" href="#home">Home</a></li>
+                        <li><a href="multifaceted.html">News</a></li>
+                        <li><a href="web-design.html">Contact</a></li>
+                        <li class="clearfix"><a href="#about">About</a></li>
+                    </ul>
+                </nav>
+            </span>
+            <span class="exploding-menu">
+                <input type="checkbox" class="menu-btn" id="menu-btn" />
+                <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
+                <ul class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="multifaceted.html">News</a></li>
+                    <li><a href="web-design.html">Contact</a></li>
+                    <li><a href="#dont">About</a></li>
+                </ul>
+            </span>
+        </div>
+        <div class="header-image">
+            <div class="anika-container-camera">
+                <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
+                <div>My work as a designer</div>
+            </div>
+        </div>
+    </header>
+
 
 
         <main>
