--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -63,9 +63,9 @@
 
             <section id="multifaceted-table">
                 <div class="container">
-                    <h3 class="design-light-color italic" style="text-align: center;">Design, light and color</h3>
+                    <h4 class="design-light-color italic" style="text-align: center;">Design, light and color</h4>
 
-                    <table>
+                    <table class="responsive-table">
                         <thead>    
                             <tr>
                                 <td></td>
@@ -75,37 +75,49 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <colgroup>
-                                <col span="4" style="width: 20%;"/>
-                            </colgroup>
                             <tr>
                                 <th scope="row">Principles</td>
+                                <th scope="row" class="responsive-th"> Design</th>
                                 <td>Good design is essential for user experience. It should be intuitive and visually appealing.</td>
+                                <th scope="row" class="responsive-th"> Light</th>
                                 <td>Natural light can provide a sense of connection to the outdoors and improve well-being.</td>
+                                <th scope="row" class="responsive-th"> Color</th>
                                 <td>Colors can convey emotions and have psychological effects on viewers.</td>
                             </tr>
                             <tr class="light-blue-row">
                                 <th scope="row">Elements</td>
+                                    <th scope="row" class="responsive-th"> Design</th>
                                 <td>Design principles guide the creation of functional and aesthetically pleasing products.</td>
+                                <th scope="row" class="responsive-th"> Light</th>
                                 <td>Lighting plays a crucial role in design. It can create ambiance and highlight key elements.</td>
+                                <th scope="row" class="responsive-th"> Color</th>
                                 <td>Color selection can evoke emotions and set the tone for a design project.</td>
                             </tr>
                             <tr>
                                 <th scope="row">Theory</td>
-                                    <td>Design thinking involves empathy, defining the problem, ideation, prototyping, and testing.</td>
-                                    <td>Proper lighting design can reduce eye strain and improve productivity in workspaces.</td>
-                                    <td>Color contrast is used for emphasis, guiding the viewer's attention.</td>
+                                    <th scope="row" class="responsive-th"> Design</th>
+                                <td>Design thinking involves empathy, defining the problem, ideation, prototyping, and testing.</td>
+                                <th scope="row" class="responsive-th"> Light</th>
+                                <td>Proper lighting design can reduce eye strain and improve productivity in workspaces.</td>
+                                <th scope="row" class="responsive-th"> Color</th>
+                                <td>Color contrast is used for emphasis, guiding the viewer's attention.</td>
                             </tr>
                             <tr class="light-blue-row">
                                 <th scope="row">Applications</td>
+                                    <th scope="row" class="responsive-th"> Design</th>
                                 <td>User-centered design ensures that products meet the needs and preferences of users.</td>
+                                <th scope="row" class="responsive-th"> Light</th>
                                 <td>Light and shadow can add depth and dimension to a design, creating a 3D effect.</td>
+                                <th scope="row" class="responsive-th"> Color</th>
                                 <td>Color harmonies like complementary and analogous colors create visual interest.</td>
                             </tr>
                             <tr>
                                 <th scope="row">Psychology</td>
+                                    <th scope="row" class="responsive-th"> Design</th>
                                 <td>Designers often collaborate with clients to refine the design concept and vision.</td>
+                                <th scope="row" class="responsive-th"> Light</th>
                                 <td>Architectural lighting can transform the appearance of buildings and landscapes.</td>
+                                <th scope="row" class="responsive-th"> Color</th>
                                 <td>Choosing the right color for a call-to-action button can impact conversion rates on a website.</td>
                             </tr>
                         </tbody>
