web-design relatevely finished

--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -40,8 +40,8 @@
                 </ul>
             </span>
         </div>
-        <div class="header-image">
-            <div class="anika-container-camera">
+        <div class="header-image secondary-image-headers">
+            <div class="anika-container">
                 <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
                 <div>My work as a designer</div>
             </div>
