fixed float blog part

--- a/PR/index.html
+++ b/PR/index.html
@@ -25,10 +25,10 @@
                 <span class="header-top opening-menu">
                     <nav>
                         <ul>
-                            <li><a class="index.html" href="#home">Home</a></li>
-                            <li><a href="multifaceted.html">News</a></li>
-                            <li><a href="web-design.html">Contact</a></li>
-                            <li class="clearfix"><a href="#about">About</a></li>
+                            <li><a class="button" href="index.html">Home</a></li>
+                            <li><a class="button" href="multifaceted.html">News</a></li>
+                            <li><a class="button" href="web-design.html">Contact</a></li>
+                            <li class="clearfix"><a class="button" href="#about">About</a></li>
                         </ul>
                     </nav>
                 </span>
