--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -40,7 +40,7 @@
                 </ul>
             </span>
         </div>
-        <div class="header-image secondary-image-headers">
+        <div class="header-image secondary-image-header">
             <div class="anika-container">
                 <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
                 <div>My work as a designer</div>
